--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"> 
     <title>MusicPlayer</title>
-    <meta name="description" content="在线音乐播放器。音乐搜索、播放、下载、歌词同步显示、个人音乐播放列表。"/>
-    <meta name="keywords" content="在线音乐播放器,OnlinePlayer。"/>
     <style>
 
      .iframeweb {
@@ -31,7 +29,7 @@
 
 <script>
 
-     var purl = "https://aiwmy.com:99"; //访问的网站
+     var purl = "http://aiwmy.com:99"; //访问的网站
 
      var winHeight;
      window.onload = function openheight() {
