--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <script>
 
-     var purl = "http://aiwmy.com:99"; //访问的网站
+     var purl = "http://myy.f3322.net:99"; //访问的网站
 
      var winHeight;
      window.onload = function openheight() {
