--- a/player.html
+++ b/player.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="DPlayer.min.css">
 	<meta name="referrer" content="no-referrer"/>
-	<link rel="stylesheet" href="/static/player/dplayer/DPlayer.min.css">
-	<script type="text/javascript" src="/static/player/dplayer/flv.min.js"></script>
-	<script type="text/javascript" src="/static/player/dplayer/hls.min.js"></script>
-	<script type="text/javascript" src="/static/player/dplayer/dash.all.min.js"></script>
-	<script type="text/javascript" src="/static/player/dplayer/webtorrent.min.js"></script>
-	<script type="text/javascript" src="/static/player/dplayer/DPlayer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
 </head>
 <style type="text/css">body,html,.content{background-color:black;padding: 0;margin: 0;width:100%;height:100%;color:#999;position:absolute;}</style>
 <body style="overflow-y:hidden;">
