--- a/player.html
+++ b/player.html
@@ -37,8 +37,8 @@ function player(id, w) {
       container: document.getElementById('ZsPlay'),
       autoplay: true,
       video: {
-        url: 'https://youku.cdn4-okzy.com/20210226/14251_09bb6d2c/index.m3u8',
-        type: 'hls',
+        url: 'magnet:?xt=urn:btih:CE066C6D02F8E0A5356ADA75D7998FE7ADE9647E',
+        type: 'webtorrent',
       }
     });
   }
