--- a/player.html
+++ b/player.html
@@ -35,11 +35,29 @@ function player(id, w) {
   } else {
     var dp = new DPlayer({
       container: document.getElementById('ZsPlay'),
-      autoplay: true,
       video: {
         url: 'magnet:?xt=urn:btih:CE066C6D02F8E0A5356ADA75D7998FE7ADE9647E',
-        type: 'webtorrent',
-      }
+        type: 'customWebTorrent',
+	      customType: {
+            customWebTorrent: function (video, player) {
+                player.container.classList.add('dplayer-loading');
+                const client = new WebTorrent();
+                const torrentId = video.src;
+                client.add(torrentId, (torrent) => {
+                    const file = torrent.files.find((file) => file.name.endsWith('.mp4'));
+                    file.renderTo(
+                        video,
+                        {
+                            autoplay: player.options.autoplay,
+                        },
+                        () => {
+                            player.container.classList.remove('dplayer-loading');
+                        }
+                    );
+                });
+            },
+        },
+      },
     });
   }
 }
