--- a/player.html
+++ b/player.html
@@ -37,7 +37,7 @@ function player(id, w) {
       container: document.getElementById('ZsPlay'),
       video: {
         url: 'https://iqiyi.cdn9-okzy.com/20210227/22946_def440ea/index.m3u81',
-        type: 'hls',
+        type: 'hls'
       }
     });
   }
