--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <script>
 
-     var purl = "http://myy.f3322.net:99"; //访问的网站
+     var purl = "/u3c3"; //访问的网站
 
      var winHeight;
      window.onload = function openheight() {
