--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"> 
     <meta http-equiv="Content-Security-Policy" content="default-src *;img-src 'self' data: base64; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
-    <title>MusicPlayer</title>
+    <title>BTSearch</title>
     <style>
 
      .iframeweb {
