--- a/player.html
+++ b/player.html
@@ -1,47 +1,43 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>网络测试专用</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="DPlayer.min.css">
-	<meta name="referrer" content="no-referrer"/>
+<meta charset="UTF-8">
+<style type="text/css">
+    body,html{width:100%;height:100%;background:#000;padding:0;margin:0;overflow-x:hidden;overflow-y:hidden}
+    *{margin:0;border:0;padding:0;text-decoration:none}
+    #stats{position:fixed;top:5px;left:10px;font-size:12px;color:#fdfdfd;z-index:2147483647;text-shadow:1px 1px 1px #000, 1px 1px 1px #000}
+    #dplayer{position:inherit}
+</style>
+<div id="dplayer"></div>
+<div id="stats"></div>
     <script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
-</head>
-<style type="text/css">body,html,.content{background-color:black;padding: 0;margin: 0;width:100%;height:100%;color:#999;position:absolute;}</style>
-<body style="overflow-y:hidden;">
-<div class="content dplayer dplayer-no-danmaku" id="ZsPlay"></div>
-
 <script>
-var isPhone = navigator.userAgent.match(/iPad|iPhone|Android|Linux|iPod/i) != null;
-player('ZsPlay', '100%');
-
-
-function _get(name){
-     var result = location.search.match(new RegExp("[\?\&]" + name+ "=([^\&]+)","i"));
-     if(result == null || result.length < 1){
-         return "";
-     }
-     return decodeURIComponent(result[1])
-}
-function player(id, w) {
-  if (isPhone) {
-    var htm = '<video src="'+ _get('url') +'" controls="controls" poster="https://pic.cytcm.com/logo.gif" autoplay="autoplay" width="' + w + '" height="100%"></video>';
-    document.getElementById(id).innerHTML = htm;
-  } else {
-    var dp = new DPlayer({
-      container: document.getElementById('ZsPlay'),
-      video: {
-        url: 'https://iqiyi.cdn9-okzy.com/20210227/22946_def440ea/index.m3u8',
-        type: 'hls'
-      }
-    });
-  }
-}
-</script>
-</body>
-</html>
+// another way, use customType
+const dp = new DPlayer({
+    container: document.getElementById('dplayer'),
+    video: {
+        url: 'magnet:?xt=urn:btih:F09B7A6FF37271AEA7008B806468AB684A68F81E',
+        type: 'customWebTorrent',
+        customType: {
+            customWebTorrent: function (video, player) {
+                player.container.classList.add('dplayer-loading');
+                const client = new WebTorrent();
+                const torrentId = video.src;
+                client.add(torrentId, (torrent) => {
+                    const file = torrent.files.find((file) => file.name.endsWith('.mp4'));
+                    file.renderTo(
+                        video,
+                        {
+                            autoplay: player.options.autoplay,
+                        },
+                        () => {
+                            player.container.classList.remove('dplayer-loading');
+                        }
+                    );
+                });
+            },
+        },
+    },
+});
+	</script>
