--- a/player.html
+++ b/player.html
@@ -7,11 +7,11 @@
 </style>
 <div id="dplayer"></div>
 <div id="stats"></div>
-    <script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
+//<script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script>
+//<script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
+//<script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
 <script>
 // another way, use customType
 const dp = new DPlayer({
