--- a/player.html
+++ b/player.html
@@ -13,26 +13,13 @@ const dp = new DPlayer({
     container: document.getElementById('dplayer'),
     video: {
         url: 'magnet:?xt=urn:btih:F09B7A6FF37271AEA7008B806468AB684A68F81E',
-        type: 'customWebTorrent',
-        customType: {
-            customWebTorrent: function (video, player) {
-                player.container.classList.add('dplayer-loading');
-                const client = new WebTorrent();
-                const torrentId = video.src;
-                client.add(torrentId, (torrent) => {
-                    const file = torrent.files.find((file) => file.name.endsWith('.mp4'));
-                    file.renderTo(
-                        video,
-                        {
-                            autoplay: player.options.autoplay,
-                        },
-                        () => {
-                            player.container.classList.remove('dplayer-loading');
-                        }
-                    );
-                });
-            },
+        type: 'webtorrent',
+    },
+    pluginOptions: {
+        webtorrent: {
+            // webtorrent config
         },
     },
 });
+console.log(dp.plugins.webtorrent); // WebTorrent instance
 </script>
