--- a/player.html
+++ b/player.html
@@ -6,7 +6,7 @@ body,html{width:100%;height:100%;background:#000;padding:0;margin:0;overflow-x:h
 #dplayer{position:inherit}
 </style>
 <div id="dplayer"></div>
-<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
 <script>
 const dp = new DPlayer({
