--- a/player.html
+++ b/player.html
@@ -1,10 +1,6 @@
-<meta charset="UTF-8">
-<style type="text/css">
-body,html{width:100%;height:100%;background:#000;padding:0;margin:0;overflow-x:hidden;overflow-y:hidden}
-*{margin:0;border:0;padding:0;text-decoration:none}
-#stats{position:fixed;top:5px;left:10px;font-size:12px;color:#fdfdfd;z-index:2147483647;text-shadow:1px 1px 1px #000, 1px 1px 1px #000}
-#dplayer{position:inherit}
-</style>
+<!doctype html>
+<html>
+<body>
 <div id="dplayer"></div>
 <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
@@ -23,3 +19,5 @@ const dp = new DPlayer({
 });
 console.log(dp.plugins.webtorrent); // WebTorrent instance
 </script>
+</body>
+</html>
