--- a/player.html
+++ b/player.html
@@ -14,6 +14,10 @@ const dp = new DPlayer({
     pluginOptions: {
         webtorrent: {
             // webtorrent config
+              target: 'web',
+              node: {
+                 fs: 'empty'
+               }
         },
     },
 });
