--- a/player.html
+++ b/player.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html>
 <body>
+<meta charset="UTF-8">
+<style type="text/css">
+    body,html{width:100%;height:100%;background:#000;padding:0;margin:0;overflow-x:hidden;overflow-y:hidden}
+    *{margin:0;border:0;padding:0;text-decoration:none}
+    #dplayer{position:inherit}
+</style>
 <div id="dplayer"></div>
-<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/cdnbye@latest/dist/hlsjs-p2p-engine.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@0.14.13"></script>
+<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js</script>
+<script src="https://cdn.jsdelivr.net/npm/cbplayer2@latest"></script>
 <script>
 const dp = new DPlayer({
     container: document.getElementById('dplayer'),
