--- a/player.html
+++ b/player.html
@@ -10,7 +10,7 @@
 <div id="dplayer"></div>
 <script src="https://cdn.jsdelivr.net/npm/cdnbye@latest/dist/hlsjs-p2p-engine.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@0.14.13"></script>
-<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js</script>
+<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"</script>
 <script src="https://cdn.jsdelivr.net/npm/cbplayer2@latest"></script>
 <script>
 const dp = new DPlayer({
