--- a/player.html
+++ b/player.html
@@ -8,10 +8,8 @@
     #dplayer{position:inherit}
 </style>
 <div id="dplayer"></div>
-<script src="https://cdn.jsdelivr.net/npm/cdnbye@latest/dist/hlsjs-p2p-engine.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/hls.js@0.14.13"></script>
-<script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/cbplayer2@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dplayer/dist/DPlayer.min.js"></script>
 <script>
 const dp = new DPlayer({
     container: document.getElementById('dplayer'),
