--- a/player.html
+++ b/player.html
@@ -14,7 +14,7 @@
 const dp = new DPlayer({
     container: document.getElementById('dplayer'),
     video: {
-        url: 'magnet:?xt=urn:btih:F09B7A6FF37271AEA7008B806468AB684A68F81E&dn=Sintel&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2F&xs=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel.torrent',
+        url: 'magnet:?xt=urn:btih:784CF56EBF8DD3832748F3D21A38C087E4C2CD30&tr=udp%3a%2f%2fp4p.arenabg.com%3a1337%2fannounce&tr=udp%3a%2f%2fexplodie.org%3a6969%2fannounce',
         type: 'webtorrent',
     },
     pluginOptions: {
