--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>访客登记表</h1>
+        <h1>访客登记</h1>
         <form id="visitorForm">
             <label for="name">姓名:</label>
             <input type="text" id="name" required>
