--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
             padding: 20px;
             border-radius: 10px;
             background-color: white;
-            text-align: center; /* 整体居中 */
+            text-align: center;
         }
 
         h1 {
             color: #333;
         }
 
-        /* 表单样式 */
         .form-section {
-            text-align: left; /* 表单内容靠左 */
+            text-align: left;
             margin-bottom: 20px;
         }
 
@@ -39,7 +38,8 @@
 
         input[type="text"],
         input[type="tel"],
-        input[type="date"] {
+        input[type="datetime-local"],
+        select {
             width: 100%;
             padding: 10px 0;
             margin: 5px 0 20px;
@@ -61,7 +61,6 @@
             background-color: #0056b3;
         }
 
-        /* 结果样式 */
         #result {
             margin-top: 20px;
             padding: 20px;
@@ -70,11 +69,10 @@
             background-color: #ffffff;
         }
 
-        /* 外层div样式 */
         .result-content {
-            text-align: left; /* 内容靠左 */
-            margin: 0 auto; /* 居中外层div */
-            max-width: max-content; /* 控制外层div的宽度 */
+            text-align: left;
+            margin: 0 auto;
+            max-width: max-content;
         }
 
         #result p {
@@ -83,10 +81,9 @@
             line-height: 1.5;
         }
 
-        /* 二维码样式 */
         #qrCanvas {
             display: block;
-            margin: 20px auto; /* 居中二维码 */
+            margin: 20px auto;
         }
 
         .hidden {
@@ -102,22 +99,25 @@
             <input type="text" id="name" required>
 
             <label for="idCard">身份证:</label>
-            <input type="text" id="idCard" required>
+            <input type="text" id="idCard" required placeholder="请输入18位身份证号码">
 
             <label for="phone">手机号码:</label>
-            <input type="tel" id="phone" required>
+            <input type="tel" id="phone" required placeholder="请输入11位手机号码">
 
             <label for="company">公司名称:</label>
             <input type="text" id="company" required>
 
             <label for="purpose">来访目的:</label>
-            <input type="text" id="purpose" required>
+            <select id="purpose" required>
+                <option value="">请选择来访目的</option>
+                <option value="参观">参观</option>
+                <option value="维护">维护</option>
+                <option value="施工">施工</option>
+                <option value="其他">其他</option>
+            </select>
 
-            <label for="startDate">进入时间:</label>
-            <input type="date" id="startDate" required>
-
-            <label for="endDate">离开时间:</label>
-            <input type="date" id="endDate" required><br><br>
+            <label for="startDate">来访时间:</label>
+            <input type="datetime-local" id="startDate" required>
 
             <button type="button" id="submitBtn">提交</button>
         </form>
@@ -127,11 +127,11 @@
                 <p><strong>姓名:</strong> <span id="resultName"></span></p>
                 <p><strong>身份证:</strong> <span id="resultIdCard"></span></p>
                 <p><strong>手机号码:</strong> <span id="resultPhone"></span></p>
-                <p><strong>公司名称:</strong> <span id="resultCompany"></span></p>
+                <p><strong>来访单位:</strong> <span id="resultCompany"></span></p>
                 <p><strong>来访目的:</strong> <span id="resultPurpose"></span></p>
-                <p><strong>访问时间段:</strong> <span id="resultVisitTime"></span></p>
+                <p><strong>访问时间:</strong> <span id="resultVisitTime"></span></p>
             </div>
-        <canvas id="qrCanvas"></canvas>
+            <canvas id="qrCanvas"></canvas>
         </div>
     </div>
 
@@ -144,36 +144,53 @@
                 const company = $('#company').val();
                 const purpose = $('#purpose').val();
                 const startDate = $('#startDate').val();
-                const endDate = $('#endDate').val();
+
+                // 验证手机号码格式
+                const phoneRegex = /^1[3-9]\d{9}$/;
+                if (!phoneRegex.test(phone)) {
+                    alert('请输入有效的手机号码');
+                    return;
+                }
+
+                // 验证身份证格式
+                const idCardRegex = /^\d{17}(\d|X)$/;
+                if (!idCardRegex.test(idCard)) {
+                    alert('请输入有效的身份证号码');
+                    return;
+                }
+
+                // 隐藏身份证中间6位
+                const maskedIdCard = idCard.replace(/(.{6})(.*)(.{6})/, '$1******$3');
+                // 隐藏手机号码中间4位
+                const maskedPhone = phone.replace(/(.{3})(.*)(.{4})/, '$1****$3');
 
                 $('#resultName').text(name);
-                $('#resultIdCard').text(idCard);
-                $('#resultPhone').text(phone);
+                $('#resultIdCard').text(maskedIdCard);
+                $('#resultPhone').text(maskedPhone);
                 $('#resultCompany').text(company);
                 $('#resultPurpose').text(purpose);
-                $('#resultVisitTime').text(`从 ${startDate} 到 ${endDate}`);
+                $('#resultVisitTime').text(startDate);
 
-                // 隐藏表单并显示结果
                 $('#visitorForm').hide();
                 $('#result').removeClass('hidden');
 
-                const encodeIfChinese = (value) => {
-                    return /[\u4e00-\u9fa5]/.test(value) ? LZString.compressToEncodedURIComponent(value) : value;
+                const encode = (value) => {
+                    return LZString.compressToEncodedURIComponent(value);
                 };
 
                 const formData = {
-                    name: encodeIfChinese(name),
+                    name: name,
                     idCard: idCard,
                     phone: phone,
-                    company: encodeIfChinese(company),
-                    purpose: encodeIfChinese(purpose),
-                    visitTime: { start: startDate, end: endDate }
+                    company: company,
+                    purpose: purpose,
+                    visitTime: startDate
                 };
 
                 const qrValue = JSON.stringify(formData);
                 const qr = new QRious({
                     element: document.getElementById('qrCanvas'),
-                    value: qrValue,
+                    value: encode(qrValue),
                     size: 200
                 });
             });
