--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             align-items: center;
             padding: 14px 0;
             border-bottom: 1px solid #eee;
+            background: white;
         }
         .form-label {
             color: #333;
