--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
         }
         .container {
+            padding: 15px;
             width: calc(100% - 30px);
-            margin: 105px auto 0;  /* 向下移动100px，同时保证容器水平居中 */
-            border-radius: 15px;  /* 为容器的四个角添加圆角 */
+            margin: 145px auto 0;  /* 向下移动100px，同时保证容器水平居中 */
+            border-radius: 0px;  /* 为容器的四个角添加圆角 */
             background-color: rgba(235, 233, 233, 0.65); /* 背景透明，白色背景，透明度50% */
             position: relative;
             overflow: hidden;  /* 确保圆角效果不被遮挡 */
@@ -42,8 +43,8 @@
             line-height: 2;
             text-align: left;
             background: #f8f8f8;
-            margin: 10px 15px;
-            border-radius: 5px;
+            margin: 5px 0;
+            border-radius: 0;
         }
         .form-container {
             background: white;
@@ -54,7 +55,7 @@
             align-items: center;
             padding: 14px 0;
             border-bottom: 1px solid #eee;
-            background-color: white;
+            background: white;
         }
         .form-label {
             color: #333;
@@ -100,7 +101,7 @@
         }
         .entry-button {
             display: block;
-            margin: 15px;
+            margin: 0;
             padding: 12px 40px 12px 12px; /* 为右侧添加额外的内边距来为图标腾出空间 */
             background: #2196F3;
             color: white;
