--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
             -moz-appearance: none;
             background-color: #ffffff; /* 可选择背景颜色 */
             border: none; /* 自定义边框颜色 */
-            padding: 8px;
-            border-radius: 4px; /* 设置圆角 */
             margin-left: auto; /* 将下拉框推到右侧 */
             width: auto;
             min-width: 90px;
             max-width: 90px; /* 设置最大宽度 */
+            font-size: 14px;
+            font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
         }
         .notice-content p {
             text-indent: 2em; /* 首行缩进两格 */
