--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
         .hidden {
             display: none;
         }
+        #startDate {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-color: #ffffff; /* 可选择背景颜色 */
+            border: none; /* 自定义边框颜色 */
+            margin-left: auto; /* 将下拉框推到右侧 */
+            width: auto;
+            font-size: 14px;
+            font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
+        }
         #purpose {
             appearance: none;
             -webkit-appearance: none;
