--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             background-repeat: no-repeat; /* 防止背景图重复 */
         }
         .container {
-            top: 175px;
+            top: 53%;
             width: auto;
             margin: 0 auto;  /* 向下移动100px，同时保证容器水平居中 */
             border-radius: 0px;  /* 为容器的四个角添加圆角 */
@@ -168,7 +168,7 @@
         }
         .modal {
             position: fixed; /* 使弹窗固定在页面上 */
-            top: 15%; /* 垂直居中 */
+            top: 8%; /* 垂直居中 */
             left: 50%; /* 水平居中 */
             transform: translateX(-50%); /* 水平居中偏移 */
             background-color: white; /* 设置弹窗背景为白色 */
@@ -189,7 +189,7 @@
             padding: 10px;
             width: 100%; /* 弹窗宽度 */
             max-width: 300px; /* 弹窗最大宽度 */
-            height: 540px;
+            height: 560px;
             overflow-y: auto; /* 启用竖向滚动条 */
             border-radius: 8px; /* 圆角效果 */
             box-sizing: border-box; /* 包括padding和border在内计算尺寸 */
