--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <!-- 新增来访目的 -->
         <div class="form-item">
             <div class="form-label">来访目的</div>
-            <select id="purpose" class="form-input" required >
+            <select class="form-input" required >
                 <option value="">请选择</option>
                 <option class="form-option" value="参观">参观</option>
                 <option class="form-option" value="维护">维护</option>
