--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         .form-label {
             color: #333;
             font-size: 14px;
+            background-color: #ffffff; /* 可选择背景颜色 */
             font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
             font-weight: bold; /* 加粗字体 */
         }
