--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <!-- 新增来访时间 -->
         <div class="form-item">
             <div class="form-label">来访时间</div>
-            <input type="datetime-local" id="startDate" class="form-input" placeholder="请选择来访时间">
+            <input type="datetime-local" class="form-input" placeholder="请选择来访时间">
         </div>
         
         <button id="submitBtn" class="submit-btn">提交信息</button>
