--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             padding: 0 5px;
             text-align: right; /* 文本右对齐 */
             background-color: #ffffff; /* 可选择背景颜色 */
+            font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
         }
         .form-option {
             text-align: right; /* 文本左对齐 */
