--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             font-size: 14px;
             color: black;
             padding: 0 5px;
-            text-align: right; /* 文本右对齐 */
+            text-align: right !important; /* 文本右对齐 */
             background-color: #ffffff; /* 可选择背景颜色 */
             font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
         }
