--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
             font-size: 14px;
             color: black;
             padding: 0 5px;
-            text-align: right !important; /* 文本右对齐 */
+            text-align: right; /* 文本右对齐 */
             background-color: #ffffff; /* 可选择背景颜色 */
             font-family: 'Microsoft YaHei', sans-serif; /* 设置字体为微软雅黑 */
+        }
+        input[type="time"] {
+            text-align: right !important;
+            direction: rtl; /* 从右到左的布局方向 */
         }
         .form-option {
             text-align: right; /* 文本左对齐 */
