--- a/index.html
+++ b/index.html
@@ -288,14 +288,7 @@
         <!-- 新增来访时间 -->
         <div class="form-item">
             <div class="form-label">来访时间</div>
-            <table style="width: 200px;">
-                <tr>
-                    <td style="width: 100%;">
-                        <input type="datetime-local" style="width: 100%; text-align: right;">
-                    </td>
-                </tr>
-            </table>
-            <!--<input type="datetime-local" class="form-input">-->
+            <input type="datetime-local" class="form-input">
         </div>
         
         <button id="submitBtn" class="submit-btn">提交信息</button>
